Fixng Java 17 compatibility